      record if \sQuote{in principle} the connection supports seeking,
      it seems safer to report \code{FALSE} when it may not work.
      
      \item \command{R CMD REMOVE} and \code{remove.packages()} now
      remove file \code{R.css} when removing all remaining packages in a
      library tree.  (Related to the wish of \PR{14475}.)
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item Because they use a C99 interface which a C++ compiler is not
      required to support, \code{Rvprintf} and \code{REvprintf} are only
      defined by \file{R_ext/Print.h} in C++ code if the macro
      \code{R_USE_C99_IN_CXX} is defined when it is included.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD Rdiff} is now implemented in \R on
      Unix-alikes (as it has been on Windows since \R 2.12.0).

      \item \command{R CMD build} no longer does any cleaning in the
      supplied package directory: all the cleaning is done in the copy.

      It has a new option \option{--install-args} to pass arguments to
      \command{R CMD INSTALL} for \option{--build} (but not when
      installing to rebuild vignettes).

      \item \command{R CMD check} now also checks for filenames that are
      case-insensitive matches to Windows' reserved file names with
      extensions, such as \file{nul.Rd}, as these have caused problems
      on some Windows systems.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item \command{make check} will now fail if there are differences
      from the reference output when testing package examples and if
      environment variable \env{R_STRICT_PACKAGE_CHECK} is set to a true
      value.
    }
  }

  \subsection{DEPRECATED & DEFUNCT}{
    \itemize{
      \item \code{require(save = TRUE)} is defunct, and use of the
      \code{save} argument is deprecated.

      \item \command{R CMD check --no-latex} is defunct: use
      \option{--no-manual} instead.
